- Fixed an issue where animations weren't working - Fixed the toast z-index level - Added title to swatches for hover feedback

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -383,7 +383,7 @@ table {
   top: 20px;
   left: 50%;
   margin: 0 auto;
-  border-radius: 20px;
+  border-radius: 24px;
   background-color: color(slate, 80);
   color: #fff;
   font-size: 14px;
@@ -391,7 +391,7 @@ table {
   padding: 12px 20px;
   text-align: center;
   box-shadow: 0 7px 11px 0 rgba(0,0,0,0.09);
-  z-index: 1;
+  z-index: 10;
 }
 
 /*-- Utilities and other similar shits --*/
